SigmaCodebackup3rdSep/objects/SubscriptionDetail__c.object
<CustomObject>
    <fields>
        <fullName>Max_Subscription__c</fullName>
        <defaultValue>&apos;12 Months&apos;</defaultValue>
        <label>Max Subscription</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min_Subscription__c</fullName>
        <defaultValue>&apos;1 Month&apos;</defaultValue>
        <label>Min Subscription</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min_Subscription_duration__c</fullName>
        <label>Min Subscription duration</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Month</fullName>
                    <default>true</default>
                    <label>1 Month</label>
                </value>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>12 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>SubscriptionDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_ByYearly_charge__c</fullName>
        <label>Subscription ByYearly charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Duration__c</fullName>
        <defaultValue>&apos;12 Months&apos;</defaultValue>
        <label>Max Subscription Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>3 Month</fullName>
                    <label>3 Months</label>
                </value>
                <value>
                    <fullName>6 Month</fullName>
                    <label>6 Months</label>
                </value>
                <value>
                    <fullName>12 Month</fullName>
                    <label>12 Months</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Id__c</fullName>
        <label>Subscription Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Name__c</fullName>
        <label>Subscription Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Tier__c</fullName>
        <label>Subscription Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                    <default>true</default>
                    <label>Tier 1</label>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_monthly_charge__c</fullName>
        <label>Subscription monthly charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_quarterly_charge__c</fullName>
        <label>Subscription quarterly charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_yearly_charge__c</fullName>
        <label>Subscription yearly charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_charges__c</fullName>
        <label>Base charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Subscription</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subscription_Name__c</columns>
        <columns>Subscription_Tier__c</columns>
        <columns>Subscription_Duration__c</columns>
        <columns>Min_Subscription_duration__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>sub{0000}</displayFormat>
        <label>SubscriptionNo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validation_for_Blank_Subscription</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Subscription_Name__c  )</errorConditionFormula>
        <errorMessage>Please Enter Subscription Name</errorMessage>
    </validationRules>
</CustomObject>